# mr_robot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  motor.py  test_client.py  test_motor_api.py
.cursor/rules/: arm-control.mdc  config-conventions.mdc  context-management.mdc  hardware-drivers.mdc  project-overview.mdc
.github/workflows/: deploy-robot.yml
config/: robot.yaml
cortex/: Cargo.toml
cortex/src/: arm.rs  config.rs  lib.rs  motor.rs  safety.rs
cortex/tests/: homing_test.rs  motor_test.rs  safety_tests.rs
deploy/: link.service
link/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
link-server/: Cargo.toml
link-server/src/: api.rs  lib.rs  main.rs  telemetry.rs
link/src/: main.tsx  routeTree.gen.ts
link/src/components/: HomingStatusCard.tsx  MotorCard.tsx  MotorControl.tsx  PoseEditor.tsx  PreflightAlert.tsx  RobotDiagram.tsx  TelemetryChart.tsx
link/src/components/ui/: dialog.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx  sonner.tsx
link/src/hooks/: useWebTransport.ts
link/src/lib/: api.ts
link/src/lib/queries/: hooks.ts
link/src/routes/: __root.tsx  arms.tsx  index.tsx  logs.tsx  motor.$id.tsx  settings.tsx  system.tsx  test.tsx
link/src/stores/: telemetry.ts
navi/: Cargo.toml
navi/src/: api.rs  lib.rs  main.rs  telemetry.rs
robstride-local/: .cargo_vcs_info.json  Cargo.toml
robstride-local/src/: actuator.rs  lib.rs  supervisor.rs  transport.rs
src/: arm.rs  config.rs  lib.rs  motor.rs
src/server/: api.rs  mod.rs  telemetry.rs
tests/: motor_test.rs
