[package]
name = "robot"
version = "0.1.0"
edition = "2024"

[dependencies]
robstride = { path = "robstride-local" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
clap = { version = "4", features = ["derive"] }
wtransport = "0.7"
base64 = "0.22"

[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[[bin]]
name = "wave_demo"
path = "src/bin/wave_demo.rs"

[[bin]]
name = "motor_repl"
path = "src/bin/motor_repl.rs"

[[bin]]
name = "link"
path = "src/bin/link.rs"
